# ddtemplate

./: .dockerignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  local.env
makefiles/: tests.mk
src/: manage.py
src/ddtemplate/: asgi.py  settings.py  urls.py  wsgi.py
